correcciones de último momento

--- a/about-me.html
+++ b/about-me.html
@@ -181,10 +181,12 @@
                     </ul>
                 </nav>
                 <div class="legal">
-                    <p><b>© Anabella Avena 2022. All rights Reserved.</b></p>
+                    <p>© Anabella Avena 2022. All rights reserved.</p>
                 </div>
-                <div><a class="ir-al-inicio" href="#header">ir al inicio</a></div>
             </div>
+        </div>
+        <div class="ir-al-inicio">
+            <a href="#header">ir al inicio</a>
         </div>
     </footer>
     <!-- fin de footer -->
