--- a/index.html
+++ b/index.html
@@ -130,28 +130,23 @@
     <!-- fin de carrousel -->
   </div>
 
-  <div class="content-two-grid-index">
-    <div class="barra">
-      <!-- barra divisoria-->
-    </div>
-    <section class="intro fondo-articulo">
-      <article class="intro-article">
-        <h2><b>¡Hola!</b></h2><br>
-        Soy Anabella, Ilustradora Freelance de Argentina,
-        actualmente viviendo en Mendoza.<br>
-        <br>
-        ¿Estás buscando ilustracones para la portada de un libro,
-        trabajos editoriales o ilustraciones para notas?<br>
-        <br>
-        ¿Y qué tal ilustraciones aplicadas a productos,
-        exhibiciones y tiendas de arte?<br>
-        <br>
-        Podés contactarme escribiendome <b>anabellaavena@gmail.com</b> para que charlemos sobre lo que
-        estás
-        buscando.
-      </article>
-    </section>
-  </div>
+  <section class="content-two-grid-index fondo-articulo">
+    <h3><b>¡Hola!</b></h3>
+    <article>
+      Soy Anabella, Ilustradora Freelance de Argentina,
+      actualmente viviendo en Mendoza.<br>
+      <br>
+      ¿Estás buscando ilustracones para la portada de un libro,
+      trabajos editoriales o ilustraciones para notas?<br>
+      <br>
+      ¿Y qué tal ilustraciones aplicadas a productos,
+      exhibiciones y tiendas de arte?<br>
+      <br>
+      Podés contactarme escribiendome <b>anabellaavena@gmail.com</b> para que charlemos sobre lo que
+      estás
+      buscando.
+    </article>
+  </section>
 
   <!-- comienzo de tarjetas -->
   <div class="content-three-grid-index">
@@ -159,24 +154,47 @@
       <img src="resources/images/portfolio/san_valentin_espacial/sanvalentin2020 IG2.jpg" class="card-img-top"
         alt="san valentin">
       <div class="card-body">
-        <h5 class="card-title">San Valentín 2020</h5>
-        <p class="card-text">Tarjetas personalizadas para eventos especiales.</p>
+        <h5 class="card-title">San Valentín espacial</h5>
         <!-- Button trigger modal -->
-        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop1">
-          Ver la imagen
+        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#san-valentin">
+          Ver el proyecto
         </button>
-
         <!-- Modal -->
-        <div class="modal fade" id="staticBackdrop1" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+        <div class="modal fade" id="san-valentin" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
           aria-labelledby="staticBackdropLabel" aria-hidden="true">
-          <div class="modal-dialog">
+          <div class="modal-dialog modal-xl modal-fullscreen-lg-down modal-dialog-scrollable">
             <div class="modal-content">
               <div class="modal-header">
-                <h5 class="modal-title" id="staticBackdropLabel">San Valentín 2020</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
               </div>
               <div class="modal-body">
-                <img src="resources/images/portfolio/san_valentin_espacial/sanvalentin2020 IG2.jpg" alt="san valentín">
+                <!-- el contenido del modal va aquí -->
+                <div class="container-fluid">
+                  <div class="row d.flex flex-column-reverse flex-md-row">
+                    <div class="col-12 col-md-6 modal-structure-image"><img
+                        src="resources/images/portfolio/san_valentin_espacial/sanvalentin2019 BG2.jpg" alt=""></div>
+                    <div class="col-12 col-md-6 modal-structure-text">
+                      <h3>San Valentín espacial</h3>
+                      <article>A partir de una ilustración de regalo de san valentin que hice para Robb, mi pareja, se
+                        me ocurrió hacer una tarjeta de san valentín descargable e imprimible sobre un amor fuera de
+                        este planeta.</article>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-12 modal-structure-image"><img
+                        src="resources/images/portfolio/san_valentin_espacial/sanvalentin2019 BG1.jpg" alt=""></div>
+                  </div>
+                  <div class="row">
+                    <div class="col-12 modal-structure-image"><img
+                        src="resources/images/portfolio/san_valentin_espacial/sanvalentin2020 IG2.jpg" alt=""></div>
+                  </div>
+                  <div class="row">
+                    <div class="col-12 modal-structure-image"><img
+                        src="resources/images/portfolio/san_valentin_espacial/Sitio Web 22 06 IMG 1 Inicio 2 Galería 5.jpg"
+                        alt=""></div>
+                  </div>
+                </div>
+                <!-- el contenido del modal termina aquí -->
               </div>
               <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">cerrar</button>
@@ -188,28 +206,125 @@
       </div>
     </div>
     <div class="card" style="width: 18rem;">
-      <img src="resources/images/portfolio/revista_chicos/Sitio Web 22 06 IMG 1 Inicio 2 Galería 1.jpg"
+      <img src="resources/images/portfolio/revista_chicos/Ilustración Nitrógeno - corrección png.png"
         class="card-img-top" alt="Revista chicos">
       <div class="card-body">
         <h5 class="card-title">Portada de Revista chicos</h5>
-        <p class="card-text">Ilustracion n° 06</p>
         <!-- Button trigger modal -->
-        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop2">
-          Ver la imagen
+        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#revista-chicos">
+          Ver el proyecto
         </button>
 
         <!-- Modal -->
-        <div class="modal fade" id="staticBackdrop2" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+        <div class="modal fade" id="revista-chicos" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
           aria-labelledby="staticBackdropLabel" aria-hidden="true">
-          <div class="modal-dialog">
+          <div class="modal-dialog modal-xl modal-fullscreen-lg-down modal-dialog-scrollable">
             <div class="modal-content">
               <div class="modal-header">
-                <h5 class="modal-title" id="staticBackdropLabel">Portada de Revista chicos</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
               </div>
               <div class="modal-body">
-                <img src="resources/images/portfolio/revista_chicos/Sitio Web 22 06 IMG 1 Inicio 2 Galería 1.jpg"
-                  alt="Minutemen">
+                <!-- el contenido del modal va aquí -->
+                <div class="container-fluid">
+                  <div class="row d.flex flex-column-reverse flex-md-row">
+                    <div class="col-12 col-md-6 modal-structure-image"><img
+                        src="resources/images/portfolio/revista_chicos/DSC01569.JPG" alt=""></div>
+                    <div class="col-12 col-md-6 modal-structure-text">
+                      <h3>Revista "CHicos de Ciencia Hoy"</h3>
+                      <article>Serie de portadas, contratapas y notas realizadas para la Revista
+                        CHicos. <br>
+                        <br>
+                        Esta Revista se caracteriza por tratar temas científicos dirijidos a un
+                        público preadolescente, por lo que antes de empezar a bocetar siempre ha
+                        sido importante hacer una investigación e informarme bien sobre los temas
+                        que estoy trabajando en cada ilustración. <br>
+                        <br>
+                        Además, los personajes deben reflejar una edad similar a la de los lectores
+                        y características físicas diversas para que éstos puedan sentirse
+                        identificados. <br>
+                        <br>
+                        Cada nuevo número que me llega para ilustrar es un desafío que me hace
+                        crecer como ilustradora.</article>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-12 modal-structure-image"><img
+                        src="resources/images/portfolio/revista_chicos/DSC01570.JPG" alt=""></div>
+                  </div>
+                  <div class="row">
+                    <div class="col-12 modal-structure-image"><img
+                        src="resources/images/portfolio/revista_chicos/DSC01584.JPG" alt=""></div>
+                  </div>
+                  <div class="row">
+                    <div class="col-12 modal-structure-image"><img
+                        src="resources/images/portfolio/revista_chicos/DSC01601.JPG" alt=""></div>
+                  </div>
+                  <div class="row">
+                    <div class="col-12 modal-structure-image"><img
+                        src="resources/images/portfolio/revista_chicos/DSC01603.JPG" alt=""></div>
+                  </div>
+                  <div class="row">
+                    <div class="col-12 modal-structure-image"><img
+                        src="resources/images/portfolio/revista_chicos/DSC01609.JPG" alt=""></div>
+                  </div>
+                  <div class="row">
+                    <div class="col-12 modal-structure-image"><img
+                        src="resources/images/portfolio/revista_chicos/Ilustración Nitrógeno - corrección png.png"
+                        alt=""></div>
+                  </div>
+                  <div class="row">
+                    <div class="col-12 modal-structure-image"><img
+                        src="resources/images/portfolio/revista_chicos/Ilustración Nitrógeno 2 - corrección png.png"
+                        alt=""></div>
+                  </div>
+                  <div class="row">
+                    <div class="col-12 modal-structure-image"><img
+                        src="resources/images/portfolio/revista_chicos/Ilustración Nitrógeno 3 - corrección png.png"
+                        alt=""></div>
+                  </div>
+                  <div class="row">
+                    <div class="col-12 modal-structure-image"><img
+                        src="resources/images/portfolio/revista_chicos/Ilustración Rabia CHicos - doble página corrección png.png"
+                        alt=""></div>
+                  </div>
+                  <div class="row">
+                    <div class="col-12 modal-structure-image"><img
+                        src="resources/images/portfolio/revista_chicos/Ilustración Rabia CHicos - doble página ejemplo.jpg"
+                        alt=""></div>
+                  </div>
+                  <div class="row">
+                    <div class="col-12 modal-structure-image"><img
+                        src="resources/images/portfolio/revista_chicos/Ilustración Tecnologías del futuro jpg v2.jpg"
+                        alt=""></div>
+                  </div>
+                  <div class="row">
+                    <div class="col-12 modal-structure-image"><img
+                        src="resources/images/portfolio/revista_chicos/RCHicos12.jpg" alt=""></div>
+                  </div>
+                  <div class="row">
+                    <div class="col-12 modal-structure-image"><img
+                        src="resources/images/portfolio/revista_chicos/RCHicos13.jpg" alt=""></div>
+                  </div>
+                  <div class="row">
+                    <div class="col-12 modal-structure-image"><img
+                        src="resources/images/portfolio/revista_chicos/RCHicos16 Tapa - Color Portada JPG.jpg" alt="">
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-12 modal-structure-image"><img
+                        src="resources/images/portfolio/revista_chicos/RCHicos17 Contraportada JPG.jpg" alt=""></div>
+                  </div>
+                  <div class="row">
+                    <div class="col-12 modal-structure-image"><img
+                        src="resources/images/portfolio/revista_chicos/RCHicos18 Contratapa JPG.jpg" alt=""></div>
+                  </div>
+                  <div class="row">
+                    <div class="col-12 modal-structure-image"><img
+                        src="resources/images/portfolio/revista_chicos/Sitio Web 22 06 IMG 1 Inicio 2 Galería 1.jpg"
+                        alt=""></div>
+                  </div>
+                </div>
+                <!-- el contenido del modal termina aquí -->
               </div>
               <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">cerrar</button>
@@ -221,27 +336,66 @@
       </div>
     </div>
     <div class="card" style="width: 18rem;">
-      <img src="resources/images/portfolio/noche_verano/Noche de Verano Lucio.jpg" class="card-img-top"
-        alt="Ilustracion">
+      <img src="resources/images/portfolio/serie_chicas/IG06 26B.jpg" class="card-img-top" alt="Ilustracion">
       <div class="card-body">
-        <h5 class="card-title">Noche de Verano</h5>
-        <p class="card-text">Una cadena de sucesos mágicos</p>
+        <h5 class="card-title">Serie Chicas</h5>
         <!-- Button trigger modal -->
-        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop3">
-          Ver la imagen
+        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#chicas">
+          Ver el proyecto
         </button>
 
         <!-- Modal -->
-        <div class="modal fade" id="staticBackdrop3" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+        <div class="modal fade" id="chicas" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
           aria-labelledby="staticBackdropLabel" aria-hidden="true">
-          <div class="modal-dialog">
+          <div class="modal-dialog modal-xl modal-fullscreen-lg-down modal-dialog-scrollable">
             <div class="modal-content">
               <div class="modal-header">
-                <h5 class="modal-title" id="staticBackdropLabel">Noche de Verano</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
               </div>
               <div class="modal-body">
-                <img src="resources/images/portfolio/noche_verano/Noche de Verano Lucio.jpg" alt="Ilustracion">
+                <!-- el contenido del modal va aquí -->
+                <div class="container-fluid">
+                  <div class="row d.flex flex-column-reverse flex-md-row">
+                    <div class="col-12 col-md-6 modal-structure-image"><img
+                        src="resources/images/portfolio/serie_chicas/IG06 23B.jpg" alt=""></div>
+                    <div class="col-12 col-md-6 modal-structure-text">
+                      <h3>Serie Chicas para Instagram</h3>
+                      <article>Realicé este proyecto personal como un estudio de color.<br>
+                        Mi intención fue dibujar estas mujeres, de diversos razgos faciales,
+                        utilizando una paleta cromática lo más limitada posible individualmente en
+                        cada uno de los personajes; pero que al mismo tiempo, en una visión más
+                        general, fuera evidente que todas forman parte del mismo sistema
+                        gráfico.<br>
+                        <br>
+                        Los modelos en los que me basé para hacerlas fueron fotografías al azar que
+                        encontré en alguna que otra revista, imágenes de pinterest, o inclusive
+                        fotografías de algunas de mis cantantes favoritas, como SIA o Lianne La
+                        Habas.
+                      </article>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-12 modal-structure-image"><img
+                        src="resources/images/portfolio/serie_chicas/IG06 24B.jpg" alt=""></div>
+                  </div>
+                  <div class="row">
+                    <div class="col-12 modal-structure-image"><img
+                        src="resources/images/portfolio/serie_chicas/IG06 25B.jpg" alt=""></div>
+                  </div>
+                  <div class="row">
+                    <div class="col-12 modal-structure-image"><img
+                        src="resources/images/portfolio/serie_chicas/IG06 26B.jpg" alt=""></div>
+                  </div>
+                  <div class="row">
+                    <div class="col-12 modal-structure-image"><img
+                        src="resources/images/portfolio/serie_chicas/IG07 27B.jpg" alt=""></div>
+                  </div>
+                  <div class="row">
+                    <div class="col-12 modal-structure-image"><img
+                        src="resources/images/portfolio/serie_chicas/IG07 28B.jpg" alt=""></div>
+                  </div>
+                </div>
+                <!-- el contenido del modal termina aquí -->
               </div>
               <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">cerrar</button>
@@ -274,10 +428,12 @@
           </ul>
         </nav>
         <div class="legal">
-          <p><b>© Anabella Avena 2022. All rights Reserved.</b></p>
+          <p>© Anabella Avena 2022. All rights reserved.</p>
         </div>
-        <div><a class="ir-al-inicio" href="#header">ir al inicio</a></div>
-      </div>
+    </div>
+  </div>
+    <div class="ir-al-inicio">
+      <a href="#header">ir al inicio</a>
     </div>
   </footer>
   <!-- fin de footer -->
