--- a/tienda.html
+++ b/tienda.html
@@ -120,9 +120,8 @@
           </ul>
         </nav>
         <div class="legal">
-          <p><b>© Anabella Avena 2022. All rights Reserved.</b></p>
+          <p>© Anabella Avena 2022. All rights reserved.</p>
         </div>
-        <div><a class="ir-al-inicio" href="#header">ir al inicio</a></div>
       </div>
     </div>
   </footer>
