solución de bugs menores y mejoras de responsive

--- a/portfolio.html
+++ b/portfolio.html
@@ -82,14 +82,13 @@
 
     <!-- contenido de la pagina -->
     <div class="content-one-grid-portfolio">
-
         <!-- inicio de tarjeta -->
         <div class="img-card">
             <img class="img-muestra"
                 src="resources/images/portfolio/revista_chicos/Ilustración Nitrógeno - corrección png.png"
                 alt="Revista chicos">
             <button type="button" class="descripcion" data-bs-toggle="modal" data-bs-target="#revista-chicos">
-                Revista CHicos
+                Revista "CHicos"
             </button>
             <!-- Modal -->
             <div class="modal fade" id="revista-chicos" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
@@ -331,7 +330,8 @@
                                             alt="ray bradbury"></div>
                                     <div class="col-12 col-md-6 modal-structure-text">
                                         <h3>"De las cenizas volverás" de Ray Bradbury</h3>
-                                        <article>Hace unos años, mi hermana, que es fan de Ray Bradbury, me prestó este libro, y quedé encantada por la historia. Cada personaje estaba relatado
+                                        <article>Hace unos años, mi hermana, que es fan de Ray Bradbury, me prestó este
+                                            libro, y quedé encantada por la historia. Cada personaje estaba relatado
                                             con tanto color que que podía verlos vívidamente en mi cabeza. Así que no
                                             esperé. Corrí por mis pinceles y mis acuarelas a plasmar estas imágenes.<br>
                                             <br>
@@ -446,7 +446,11 @@
                                             ilustración de 5 gatitos de distintas razas con personalidades únicas, para
                                             unos pads para PC con orejas de gato.<br>
                                             <br>
-                                            Después del análisis del público hacia el que se dirije el proyecto, sugerí que los gatitos siguieran siendo los protagonistas de los pads, pero que se encontraran acompañados por chicas con diferentes estilos, las cuales representan un avatar con el cual la persona que desea comprar el pad puede identificarse y conectar.<br>
+                                            Después del análisis del público hacia el que se dirije el proyecto, sugerí
+                                            que los gatitos siguieran siendo los protagonistas de los pads, pero que se
+                                            encontraran acompañados por chicas con diferentes estilos, las cuales
+                                            representan un avatar con el cual la persona que desea comprar el pad puede
+                                            identificarse y conectar.<br>
                                             <br>
                                             De esta manera, el cliente no sólo está comprando un pad, sino que además
                                             está adoptando a estos gatitos. ¿No te parece adorable?</article>
@@ -719,39 +723,45 @@
                                 <div class="row">
                                     <div class="col-12 modal-structure-image"><img
                                             src="resources/images/portfolio/six_fanarts/Sitio Web 22 06 IMG 1 Inicio 2 Galería 3.jpg"
-                                            alt=""></div>
+                                            alt="">
+                                    </div>
                                 </div>
                                 <div class="row">
                                     <div class="col-12 modal-structure-image"><img
                                             src="resources/images/portfolio/six_fanarts/Six Fanarts 2 Toph B.jpg"
-                                            alt=""></div>
+                                            alt="">
+                                    </div>
                                 </div>
                                 <div class="row">
                                     <div class="col-12 modal-structure-image"><img
                                             src="resources/images/portfolio/six_fanarts/Six Fanarts 3 Sailor Urano B.jpg"
-                                            alt=""></div>
+                                            alt="">
+                                    </div>
                                 </div>
                                 <div class="row">
                                     <div class="col-12 modal-structure-image"><img
                                             src="resources/images/portfolio/six_fanarts/Six Fanarts 4 Alucard B.jpg"
-                                            alt=""></div>
+                                            alt="">
+                                    </div>
                                 </div>
                                 <div class="row">
                                     <div class="col-12 modal-structure-image"><img
                                             src="resources/images/portfolio/six_fanarts/Six Fanarts 5 Perla B.jpg"
-                                            alt=""></div>
+                                            alt="">
+                                    </div>
                                 </div>
                                 <div class="row">
                                     <div class="col-12 modal-structure-image"><img
                                             src="resources/images/portfolio/six_fanarts/Six Fanarts 6 Mary Poppins B +firma.jpg"
-                                            alt=""></div>
+                                            alt="">
+                                    </div>
                                 </div>
                             </div>
+                            <!-- el contenido del modal termina aquí -->
                         </div>
-                        <!-- el contenido del modal termina aquí -->
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">cerrar</button>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">cerrar</button>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -801,20 +811,26 @@
                                 <div class="row">
                                     <div class="col-12 modal-structure-image"><img
                                             src="resources/images/portfolio/soppelsa/Sitio Web 22 06 IMG 1 Inicio 2 Galería 6.jpg"
-                                            alt=""></div>
+                                            alt="">
+                                    </div>
                                 </div>
                             </div>
+                            <!-- el contenido del modal termina aquí -->
                         </div>
-                        <!-- el contenido del modal termina aquí -->
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">cerrar</button>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">cerrar</button>
+                        </div>
                     </div>
                 </div>
             </div>
             <!-- Fin de Modal -->
         </div>
         <!-- fin de tarjeta -->
+
+
+        <!-- inicio de corrección -->
+
+
 
         <!-- inicio de tarjeta -->
         <div class="img-card">
@@ -855,19 +871,21 @@
                                 <div class="row">
                                     <div class="col-12 modal-structure-image"><img
                                             src="resources/images/portfolio/soppelsa-dos/FDÑO 21 12 Soppelsa NAVIDAD 300dpi Color Cuorelato v4.png"
-                                            alt=""></div>
+                                            alt="">
+                                    </div>
                                 </div>
                                 <div class="row">
                                     <div class="col-12 modal-structure-image"><img
                                             src="resources/images/portfolio/soppelsa-dos/269723866_1262139384290.jpg"
-                                            alt=""></div>
+                                            alt="">
+                                    </div>
                                 </div>
                             </div>
+                            <!-- el contenido del modal termina aquí -->
                         </div>
-                        <!-- el contenido del modal termina aquí -->
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">cerrar</button>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">cerrar</button>
+                        </div>
                     </div>
                 </div>
             </div>
