se categoriza y optimiza secciones en  scss

--- a/about-me.html
+++ b/about-me.html
@@ -11,7 +11,7 @@
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 
     <!-- CSS -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 
     <title>Sobre Mí</title>
 
@@ -85,7 +85,7 @@
     <div class="presentation-grid-aboutme-one">
         <article class="presentation">
             <h4 class="presentation-title-start">¡Hola!</h4>
-            <p class="presentation text-right">
+            <p class="presentation">
                 Mi nombre es Anabella Avena (¡Claro que podés llamarme Ana!), crecí en la ciudad de Tunuyán,
                 ubicada en un valle entre montañas en Mendoza, Argentina. <br>
                 <br>
@@ -100,7 +100,7 @@
     <div class="presentation-grid-aboutme-two">
         <article class="presentation">
             <h4 class="presentation-title-end">Comienzos</h4>
-            <p class="presentation text-left">
+            <p class="presentation">
                 Mi amor por la ilustración empezó desde pequeña, me encantaba ver animé, leer historietas, colorear
                 libros para pintar y pasarme horas leyendo y observando los detalles de las ilustraciones de los
                 libros y revistas que me regalaban mis padres(a quienes por cierto, les estoy muy agradecida). <br>
@@ -115,7 +115,7 @@
     <div class="presentation-grid-aboutme-three">
         <article class="presentation">
             <h4 class="presentation-title-start">Inspiración</h4>
-            <p class="presentation text-right">
+            <p class="presentation">
                 Tengo varias fuentes de inspiración en las que baso mi trabajo. Mi movimiento artísitco e historico
                 favorito es el impresionismo, que me hace admirar la forma en la que sus representantes estudiaban y
                 plasmaban la luz. También me siento fuertemente influenciada por la cultura japonesa y la magia
@@ -134,7 +134,7 @@
     <div class="presentation-grid-aboutme-four">
         <article class="presentation">
             <h4 class="presentation-title-end">Curiosidades</h4>
-            <p class="presentation text-left">
+            <p class="presentation">
                 Algunas cosas interesantes sobre mí: Mi compañera de trabajo es una gatita de pelo largo llamada
                 Miyuki. Me encantan los aromas y sabores cítricos, especialmente el limon. Disfruto mucho diseñando
                 e ilustrando productos físicos como ropa, juegos y juguetes, o elementos decorativos para el hogar.
