--- a/tienda.html
+++ b/tienda.html
@@ -18,7 +18,7 @@
   content="Sitio web dedicado a publicar mis trabajos de ilustración, promociones y venta de arte gráfico.">
 <meta name="viewport" content="width-device-width, initial-scale=1.0">
 <meta name="keywords"
-  content="diseño gráfico, ilustración, fanarts, lápiz, art, arte gráfico, arte, pincel, tableta gráfica, mockups, imágenes, ventas, comisiones, tienda, blog, cute, kawaii, adorable">
+  content="diseño gráfico, ilustración, fanarts, comercio, flashcookie, arte gráfico, arte, inprint, redbubble, wallpapers, mockups, imágenes, posters, ventas, comisiones, tienda, ecomerce, cute, productos graficos">
 
 <!-- Protocolo Open Graph -->
 <meta property="og:title" content="Anabella Avena - Portfolio">
