ultima revisión de metadatos, corrección ortográfica y detalles

--- a/about-me.html
+++ b/about-me.html
@@ -21,7 +21,7 @@
         content="diseño gráfico, ilustración, presentacion, amor, comienzos, arte gráfico, arte, magia, tableta gráfica, creatividad, imágenes, inspiración, comisiones, tienda, vida, cute, estudios, adorable">
 
     <!-- Protocolo Open Graph -->
-    <meta property="og:title" content="Anabella Avena - Portfolio">
+    <meta property="og:title" content="Anabella Avena - Acerca de Mí">
     <meta property="og:url" content="http://www.anabellaavena.com/about-me">
     <meta property="og:description"
         content="Te cuento un poco acerca de mí, mis motivaciones y las cosas que me gustan.">
