--- a/contacto.html
+++ b/contacto.html
@@ -18,10 +18,10 @@
   content="Sitio web dedicado a publicar mis trabajos de ilustración, promociones y venta de arte gráfico.">
 <meta name="viewport" content="width-device-width, initial-scale=1.0">
 <meta name="keywords"
-  content="diseño gráfico, ilustración, fanarts, contacto, comunicacion, arte gráfico, arte, proyecto, wallpaper, mockups, imágenes, ventas, comisiones, presupuesto, blog, mensaje, email, editoriales">
+  content="diseño gráfico, ilustración, fanarts, contacto, comunicación, arte gráfico, arte, proyecto, wallpaper, mockups, imágenes, ventas, comisiones, presupuesto, blog, mensaje, email, editoriales">
 
 <!-- Protocolo Open Graph -->
-<meta property="og:title" content="Anabella Avena - Portfolio">
+<meta property="og:title" content="Anabella Avena - Contacto">
 <meta property="og:url" content="http://www.anabellaavena.com/about-me">
 <meta property="og:description"
   content="Sección de prensa, te puedes poner en contacto conmigo para evaluar presupuestos, comisiones o trabajos específicos.">
