--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
     content="Sitio web dedicado a publicar mis trabajos de ilustración, promociones y venta de arte gráfico.">
   <meta name="viewport" content="width-device-width, initial-scale=1.0">
   <meta name="keywords"
-    content="diseño gráfico, ilustración, fanarts, arte digital, Freelance, arte gráfico, digitalizacion, tableta gráfica, mockups, imágenes, ventas, comisiones, tienda, blog, cute, kawaii, adorable, isnpiración">
+    content="diseño gráfico, ilustración, fanarts, arte digital, Freelance, arte gráfico, digitalización, tableta gráfica, mockups, imágenes, ventas, comisiones, tienda, blog, cute, kawaii, adorable, inspiración">
 
   <!-- Protocolo Open Graph -->
   <meta property="og:title" content="Anabella Avena - Home">
   <meta property="og:url" content="http://www.anabellaavena.com">
   <meta property="og:description"
-    content="Home del sitio de diseño gráfico de Anabella Avena. (Este es el Hub donde encuentras todo mi contenido en la web.">
+    content="Home del sitio de diseño gráfico de Anabella Avena. (Este es el Hub donde encuentras todo mi contenido en la web).">
 
   <!-- Título -->
   <title>Anabella Avena - Ilustradora Freelance - Home</title>
