--- a/tienda.html
+++ b/tienda.html
@@ -18,13 +18,13 @@
   content="Sitio web dedicado a publicar mis trabajos de ilustración, promociones y venta de arte gráfico.">
 <meta name="viewport" content="width-device-width, initial-scale=1.0">
 <meta name="keywords"
-  content="diseño gráfico, ilustración, fanarts, comercio, flashcookie, arte gráfico, arte, inprint, redbubble, wallpapers, mockups, imágenes, posters, ventas, comisiones, tienda, ecomerce, cute, productos graficos">
+  content="diseño gráfico, ilustración, fanarts, comercio, flashcookie, arte gráfico, arte, inprint, redbubble, wallpapers, mockups, imágenes, pósters, ventas, comisiones, tienda, ecommerce, cute, productos gráficos">
 
 <!-- Protocolo Open Graph -->
-<meta property="og:title" content="Anabella Avena - Portfolio">
-<meta property="og:url" content="http://www.anabellaavena.com/about-me">
+<meta property="og:title" content="Anabella Avena - Tienda">
+<meta property="og:url" content="http://www.anabellaavena.com/tienda">
 <meta property="og:description"
-  content="En esta sección puedes escontrar las tiendas donde promociono mi contenido, comisiones y mucho mas.">
+  content="En esta sección puedes encontrar las tiendas donde promociono mi contenido, comisiones y mucho más.">
 
 <!-- Título -->
   <title>Anabella Avena - Ilustradora Freelance - Tienda</title>
