--- a/contacto.html
+++ b/contacto.html
@@ -22,7 +22,7 @@
 
 <!-- Protocolo Open Graph -->
 <meta property="og:title" content="Anabella Avena - Contacto">
-<meta property="og:url" content="http://www.anabellaavena.com/about-me">
+<meta property="og:url" content="http://www.anabellaavena.com/contacto">
 <meta property="og:description"
   content="Sección de prensa, te puedes poner en contacto conmigo para evaluar presupuestos, comisiones o trabajos específicos.">
 
